Expand webcam_private api such that we can control auto focus setting ('on' or 'off') and the focus value. The focus value can be read back with the get command. Implemented for Visca and UVC cameras.

Bug: 888475
Change-Id: I41ac7c75e4e0893d085b7b1599ead7ffba7b5d26
Reviewed-on: https://chromium-review.googlesource.com/1240281
Reviewed-by: Zachary Kuznia <zork@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Daniel Fenner <dfenner@google.com>
Cr-Commit-Position: refs/heads/master@{#594672}
Former-commit-id: c3a04a2f21c24c72ac146901f8145f5423dcda3e