extensions/browser/api/webcam_private/visca_webcam.h
@@ -38,6 +38,7 @@ class ViscaWebcam : public Webcam {
     INQUIRY_PAN,
     INQUIRY_TILT,
     INQUIRY_ZOOM,
+    INQUIRY_FOCUS,
   };
 
   using CommandCompleteCallback =
@@ -99,6 +100,7 @@ class ViscaWebcam : public Webcam {
   void GetPan(const GetPTZCompleteCallback& callback) override;
   void GetTilt(const GetPTZCompleteCallback& callback) override;
   void GetZoom(const GetPTZCompleteCallback& callback) override;
+  void GetFocus(const GetPTZCompleteCallback& callback) override;
   void SetPan(int value,
               int pan_speed,
               const SetPTZCompleteCallback& callback) override;
@@ -116,6 +118,9 @@ class ViscaWebcam : public Webcam {
              bool tilt,
              bool zoom,
              const SetPTZCompleteCallback& callback) override;
+  void SetFocus(int value, const SetPTZCompleteCallback& callback) override;
+  void SetAutofocusState(AutofocusState state,
+                         const SetPTZCompleteCallback& callback) override;
 
   // Used only in unit tests in place of Open().
   void OpenForTesting(std::unique_ptr<SerialConnection> serial_connection);
